added new 3d model

--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
       <div class="circle"></div>
       <div class="circle"></div>
     </div>
+    <div class="page" id="about">
+      <div id="particles-js1"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </div>
 
     <div class="page" id="about">
       <div id="particles-js1"></div>
