--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <body>
     <canvas id="canvas3d"></canvas>
     <nav class="navbar">
-      <a href="#about" class="nav-link">About Me</a>
-      <a href="#skills" class="nav-link">Skills</a>
-      <a href="#projects" class="nav-link">Projects</a>
+      <a href="#page2" class="nav-link">Skills</a>
+      <a href="#Projects" class="nav-link">Projects</a>
+
       <a href="#contactme" class="nav-link">Contact Me</a>
     </nav>
     <div class="page" id="page1">
@@ -74,8 +74,23 @@
       <div class="circle"></div>
     </div>
 
-    <div class="page" id="about">
-      <div id="particles-js1"></div>
+    <div class="page" id="page2">
+      <div id="particles-js1">
+        <p>
+          Hi, I'm Viraj, a passionate web developer and problem-solver with a
+          keen interest in crafting beautiful, user-friendly websites and
+          applications. With a strong foundation in front-end technologies and
+          an eye for detail, I love translating creative ideas into fully
+          functional, responsive designs. Over the years, I've honed my skills
+          in JavaScript, HTML, and CSS, and I enjoy experimenting with modern
+          frameworks and libraries to push the boundaries of web development.
+          When I'm not coding, you'll find me exploring new technologies,
+          reading about design trends, or contributing to open-source projects.
+          I believe in the power of collaboration and continuous learning, and
+          I'm always excited about the next challenge that allows me to grow as
+          a developer.
+        </p>
+      </div>
       <div class="circle"></div>
       <div class="circle"></div>
       <div class="circle"></div>
@@ -99,10 +114,35 @@
 
       <canvas id="canvas3ds"></canvas>
     </div>
+
+    <div id="Projects"><div id="particles-js2"></div></div>
+    <div><div id="particles-js3"></div></div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
+      integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="scroll.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="main2.js"></script>
-    <script src="custom.js"></script>
-    <script src="customm.js"></script>
+    <script src="particles.js"></script>
+    <script src="particles1.js"></script>
+    <script src="particles2.js"></script>
+    <script src="particles3.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
