Added GSAP Scripts

--- a/index.html
+++ b/index.html
@@ -115,8 +115,16 @@
       <canvas id="canvas3ds"></canvas>
     </div>
 
-    <div id="Projects"><div id="particles-js2"></div></div>
-    <div><div id="particles-js3"></div></div>
+    <div id="Projects">
+      <div id="particles-js2">
+        <h3>Projects</h3>
+      </div>
+    </div>
+    <div>
+      <div id="particles-js3">
+        <h4>Contact Me</h4>
+      </div>
+    </div>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
@@ -137,12 +145,13 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="scroll.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.jss"></script>
     <script type="module" src="main2.js"></script>
     <script src="particles.js"></script>
     <script src="particles1.js"></script>
     <script src="particles2.js"></script>
     <script src="particles3.js"></script>
     <script src="script.js"></script>
+    <script src="gsap"></script>
   </body>
 </html>
