--- a/index.html
+++ b/index.html
@@ -145,13 +145,12 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="scroll.js"></script>
-    <script type="module" src="main.jss"></script>
+    <script type="module" src="main.js"></script>
     <script type="module" src="main2.js"></script>
     <script src="particles.js"></script>
     <script src="particles1.js"></script>
     <script src="particles2.js"></script>
     <script src="particles3.js"></script>
     <script src="script.js"></script>
-    <script src="gsap"></script>
   </body>
 </html>
