--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Honk&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
@@ -76,7 +84,8 @@
 
     <div class="page" id="page2">
       <div id="particles-js1">
-        <p>
+        <h4 class="honk-uni">Śķĩllš</h4>
+        <!-- <p>
           Hi, I'm Viraj, a passionate web developer and problem-solver with a
           keen interest in crafting beautiful, user-friendly websites and
           applications. With a strong foundation in front-end technologies and
@@ -89,7 +98,7 @@
           I believe in the power of collaboration and continuous learning, and
           I'm always excited about the next challenge that allows me to grow as
           a developer.
-        </p>
+        </p> -->
       </div>
       <div class="circle"></div>
       <div class="circle"></div>
@@ -117,13 +126,39 @@
 
     <div id="Projects">
       <div id="particles-js2">
-        <h3>Projects</h3>
+        <h3 class="honk-uni">Přõjëctș</h3>
       </div>
+      <div class="container">
+        <ul id="cards">
+          <li class="card" id="card1">
+            <div class="card-body">
+              <h2>Project1</h2>
+            </div>
+          </li>
+          <li class="card" id="card2">
+            <div class="card-body">
+              <h2>Project2</h2>
+              <p>this is virj deshmhumkh fafjlka jfkaljf lkajflka</p>
+              <button type="button">Click Me!</button>
+            </div>
+          </li>
+          <li class="card" id="card3">
+            <div class="card-body">
+              <h2>Project1</h2>
+            </div>
+          </li>
+          <li class="card" id="card4">
+            <div class="card-body">
+              <h2>Project1 4</h2>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <h6 class="bungee-spice-regular">In Progress....</h6>
     </div>
-    <div>
-      <div id="particles-js3">
-        <h4>Contact Me</h4>
-      </div>
+
+    <div id="particles-js3">
+      <h4 class="honk-uni">Contact Me</h4>
     </div>
 
     <script
