--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Viraj Deshmukh</title>
+    <link rel="icon" type="image/x-icon" href="v.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -157,8 +159,42 @@
       <h6 class="bungee-spice-regular">In Progress....</h6>
     </div>
 
-    <div id="particles-js3">
+    <div>
       <h4 class="honk-uni">Contact Me</h4>
+      <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
+        virajvd99@gmail.com
+      <h5>
+        <p>Get in touch (Click to copy)</p>
+
+        <form action="">
+          <div class="title">
+            <h2>CONTACT</h2>
+          </div>
+          <div class="half">
+            <div class="item">
+              <label for="name">NAME</label>
+              <input type="text" id = "name">
+            </div>
+            <div class="item">
+              <label for="email">EMAIL</label>
+              <input type="text" id = "email">
+            </div>
+          </div>
+          <div class="full">
+            <label for="message">MESSAGE</label>
+            <textarea name="" id = "message"></textarea>
+          </div>
+          <div class="action">
+            <input type="submit" value = "SEND MESSAGE">
+            <input type="reset" value = "RESET">
+          </div>
+          <div class="icons">
+            <a href="" class = "fa fa-twitter"></a>
+            <a href="" class = "fa fa-facebook"></a>
+            <a href="" class = "fa fa-instagram"></a>
+            <a href="" class = "fa fa-github"></a>
+          </div>
+        </form>
     </div>
 
     <script
@@ -182,6 +218,7 @@
     <script src="scroll.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="main2.js"></script>
+    <script type="module" src="main3.js"></script>
     <script src="particles.js"></script>
     <script src="particles1.js"></script>
     <script src="particles2.js"></script>
