--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Viraj Deshmukh</title>
-    <link rel="icon" type="image/x-icon" href="v.ico">
+    <link rel="icon" type="image/x-icon" href="vvv.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -159,7 +159,9 @@
       <h6 class="bungee-spice-regular">In Progress....</h6>
     </div>
 
-    <div id="contactme">
+    <div class="page" id="contactme">
+
+
       <h4 class="honk-uni">Contact Me</h4>
       <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
         virajvd99@gmail.com
