--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Viraj Deshmukh</title>
-    <link rel="icon" type="image/x-icon" href="vvv.ico">
+    <link rel="icon" type="image/x-icon" href="vvv.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -146,12 +146,12 @@
           </li>
           <li class="card" id="card3">
             <div class="card-body">
-              <h2>Project1</h2>
+              <h2>Project3</h2>
             </div>
           </li>
           <li class="card" id="card4">
             <div class="card-body">
-              <h2>Project1 4</h2>
+              <h2>Project 4</h2>
             </div>
           </li>
         </ul>
@@ -160,14 +160,14 @@
     </div>
 
     <div class="page" id="contactme">
-
+      <div id="particles-js3"></div>
 
       <h4 class="honk-uni">Contact Me</h4>
-      <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
+      <!-- <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
         virajvd99@gmail.com
       <h5>
-        <p>Get in touch (Click to copy)</p>
-
+        <p>Get in touch (Click to copy)</p> -->
+      <!-- 
         <form action="">
           <div class="title">
             <h2>CONTACT</h2>
@@ -196,7 +196,7 @@
             <a href="" class = "fa fa-instagram"></a>
             <a href="" class = "fa fa-github"></a>
           </div>
-        </form>
+        </form> -->
     </div>
 
     <script
