added gradient colors to cards

--- a/index.html
+++ b/index.html
@@ -133,25 +133,61 @@
       <div class="container">
         <ul id="cards">
           <li class="card" id="card1">
-            <div class="card-body">
-              <h2>Project1</h2>
+            <div class="mac-window">
+              <div class="window-header">
+                <div class="window-buttons">
+                  <span class="window-button red"></span>
+                  <span class="window-button yellow"></span>
+                  <span class="window-button green"></span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2>Project 1</h2>
+              </div>
             </div>
           </li>
           <li class="card" id="card2">
-            <div class="card-body">
-              <h2>Project2</h2>
-              <p>this is virj deshmhumkh fafjlka jfkaljf lkajflka</p>
-              <button type="button">Click Me!</button>
+            <div class="mac-window">
+              <div class="window-header">
+                <div class="window-buttons">
+                  <span class="window-button red"></span>
+                  <span class="window-button yellow"></span>
+                  <span class="window-button green"></span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2>Project 2</h2>
+                <p>This is Viraj Deshmukh's project description.</p>
+                <button type="button">Click Me!</button>
+              </div>
             </div>
           </li>
           <li class="card" id="card3">
-            <div class="card-body">
-              <h2>Project3</h2>
+            <div class="mac-window">
+              <div class="window-header">
+                <div class="window-buttons">
+                  <span class="window-button red"></span>
+                  <span class="window-button yellow"></span>
+                  <span class="window-button green"></span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2>Project 3</h2>
+              </div>
             </div>
           </li>
           <li class="card" id="card4">
-            <div class="card-body">
-              <h2>Project 4</h2>
+            <div class="mac-window">
+              <div class="window-header">
+                <div class="window-buttons">
+                  <span class="window-button red"></span>
+                  <span class="window-button yellow"></span>
+                  <span class="window-button green"></span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2>Project 4</h2>
+              </div>
             </div>
           </li>
         </ul>
