contact us form

--- a/index.html
+++ b/index.html
@@ -196,13 +196,14 @@
     </div>
 
     <div class="page" id="contactme">
-      <div id="particles-js3"></div>
+      <div id="particles-js3">
+        <h4 class="honk-uni">Contact Me</h4>
+        <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
+          virajvd99@gmail.com
+        </h5>
 
-      <h4 class="honk-uni">Contact Me</h4>
-      <!-- <h5 class="email" id="copyemail" data-clipboard-text="hey@dejan.works">
-        virajvd99@gmail.com
-      <h5>
-        <p>Get in touch (Click to copy)</p> -->
+        <p>Get in touch (Click to copy)</p>
+      </div>
       <!-- 
         <form action="">
           <div class="title">
