--- a/index.html
+++ b/index.html
@@ -203,37 +203,41 @@
         </h5>
 
         <p>Get in touch (Click to copy)</p>
-      </div>
-      <!-- 
-        <form action="">
+        <img
+          class="message"
+          src="message.jpg"
+          alt="Illustration of a letter with a heart on the top flap."
+        />
+        <form>
           <div class="title">
             <h2>CONTACT</h2>
           </div>
           <div class="half">
             <div class="item">
               <label for="name">NAME</label>
-              <input type="text" id = "name">
+              <input type="text" id="name" />
             </div>
             <div class="item">
               <label for="email">EMAIL</label>
-              <input type="text" id = "email">
+              <input type="text" id="email" />
             </div>
           </div>
           <div class="full">
             <label for="message">MESSAGE</label>
-            <textarea name="" id = "message"></textarea>
+            <textarea id="message"></textarea>
           </div>
           <div class="action">
-            <input type="submit" value = "SEND MESSAGE">
-            <input type="reset" value = "RESET">
+            <input type="submit" value="SEND MESSAGE" />
+            <input type="reset" value="RESET" />
           </div>
           <div class="icons">
-            <a href="" class = "fa fa-twitter"></a>
-            <a href="" class = "fa fa-facebook"></a>
-            <a href="" class = "fa fa-instagram"></a>
-            <a href="" class = "fa fa-github"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-github"></a>
           </div>
-        </form> -->
+        </form>
+      </div>
     </div>
 
     <script
