--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </head>
   <body>
@@ -215,16 +219,16 @@
           <div class="half">
             <div class="item">
               <label for="name">NAME</label>
-              <input type="text" id="name" />
+              <input class="TC" type="text" id="name" />
             </div>
             <div class="item">
               <label for="email">EMAIL</label>
-              <input type="text" id="email" />
+              <input class="TC" type="text" id="email" />
             </div>
           </div>
           <div class="full">
             <label for="message">MESSAGE</label>
-            <textarea id="message"></textarea>
+            <textarea class="TC" id="message"></textarea>
           </div>
           <div class="action">
             <input type="submit" value="SEND MESSAGE" />
