icons css added

--- a/index.html
+++ b/index.html
@@ -235,10 +235,26 @@
             <input type="reset" value="RESET" />
           </div>
           <div class="icons">
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-github"></a>
+            <a
+              href="https://www.linkedin.com/in/virajd0/"
+              class="fa fa-linkedin"
+              id="linkdn"
+              target="_blank"
+            ></a>
+
+            <a
+              href="https://www.instagram.com/viraj.d0/"
+              class="fa fa-instagram"
+              id="insta"
+              target="_blank"
+            ></a>
+
+            <a
+              href="https://github.com/VirajxD0"
+              class="fa fa-github"
+              id="git"
+              target="_blank"
+            ></a>
           </div>
         </form>
       </div>
