icons css added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <body>
     <canvas id="canvas3d"></canvas>
     <nav class="navbar">
+      <a href="#canvas3d" class="nav-link">Home</a>
       <a href="#page2" class="nav-link">Skills</a>
       <a href="#Projects" class="nav-link">Projects</a>
 
