--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="content">
         <h1 class="archivo-black-regular">Hello, I am</h1>
       </div>
-      <button class="btn">Hire me</button>
+      <button class="btn" href="#contactme">Hire me</button>
       <a href="https://github.com/VirajxD0" target="_blank" class="an">
         <button class="btn btn1"><i class="fa-brands fa-github"></i></button>
       </a>
