--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         >
           virajvd99@gmail.com
         </h5>
+        <h7> All rights reserved © Viraj Deshmukh 2024 </h7>
 
         <p>Get in touch (Click to copy)</p>
         <img class="message" src="message.jpg" alt="signature" />
