--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="scroll.js"></script>
+    <script type="module" src="scroll.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="main2.js"></script>
     <script type="module" src="main3.js"></script>
-    <script src="particles.js"></script>
-    <script src="particles1.js"></script>
-    <script src="particles2.js"></script>
-    <script src="particles3.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="particles.js"></script>
+    <script type="module" src="particles1.js"></script>
+    <script type="module" src="particles2.js"></script>
+    <script type="module" src="particles3.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
